--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==2.2.17
 django-heroku==0.3.1
 gunicorn==20.0.4
 psycopg2==2.7.5
+python-dotenv==0.15.0
 pytz==2020.4
 sqlparse==0.4.1
 whitenoise==5.2.0
